<resources>
    <string name="app_name">titans_project</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="create_profile">Create Profile</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
    <string name="user_type">User Type</string>
    <string name="create">Create</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="checkbox_notifications">Receive notifications from Organizers and Administration</string>
    <string name="profile">Profile</string>
    <string name="edit_remove_profile_pic">Edit/Remove Profile Pic</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_return">Return</string>
    <string name="optional">(Optional)</string>
    <string name="my_application_title">My Application</string>
    <string name="leave_waitlist">Leave Waitlist</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="return_to_homepage">Return to Homepage</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="result_title">Event Result</string>
    <string name="application_form">Application Form</string>
    <string name="application_submit">Submit</string>
    <string name="checkbox_application">I accept the terms and conditions</string>
    <string name="result_describe">Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result / Situation of result /</string>
    <string name="my_events">My Events</string>
    <string name="event_details">Event Details</string>
    <string name="geolocation_sharing_message">I agree to share my geolocation</string>
    <string name="apply">Apply</string>
    <string name="event_details_example">The Volunteer Event System is a platform designed to simplify the organization, promotion, and participation in volunteer events. This system connects organizations, volunteers, and event coordinators by providing a centralized location to create, manage, and sign up for events.</string>
    <string name="event_date_example">The Volunteering Program will kick off on November 5th, 2024, and will run every Tuesday and Thursday from 10 AM to 2 PM at the Lakeside Community Center.</string>
    <string name="my_applications">Applications</string>
    <string name="homepage">Homepage</string>
    <string name="event_update">Event Update</string>
    <string name="scan">Scan</string>
    <string name="created_events">Created Events</string>
    <string name="facility">Facility</string>
    <string name="browse_content">Browse Content</string>

    <!-- New Strings for Bottom Icons -->
    <string name="application">Applications</string>
    <string name="profile_icon">Profile</string>
    <string name="scan_icon">Scan</string>
    <string name="mail">Mail</string>


    <!-- Added missing strings -->
    <string name="back_icon">Back</string> <!-- Back button text -->
    <string name="add_event">Add Event</string> <!-- Event addition label -->

    <!-- Strings for menu actions -->
    <string name="action_edit_event">Edit Event</string>
    <string name="action_delete_event">Delete Event</string>
    <string name="action_share_event">Share Event</string>
    <string name="action_view_details">View Details</string>
    <string name="action_share_qr">Share QR</string>

    <!-- Added missing strings for menu icon -->
    <string name="menu_icon">Menu icon</string> <!-- Content description for menu icon -->
</resources>
