<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/button_toolbar"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/admin_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admin Mode"
                android:textColor="@color/light_gray"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_events"
                android:textColor="@color/dark_gray"
                android:textSize="34sp"
                android:paddingEnd="100dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_events"
                android:layout_margin="5dp"
                android:textSize="14sp"
                android:backgroundTint="@color/dark_gray"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/created_events_button"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <ListView
            android:id="@+id/listview_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="4">

        <!-- Image Buttons for toolbar, make sure they are used correctly with images/icons -->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:id="@+id/application_button"
            android:contentDescription="@string/application" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/profile_button"
            android:contentDescription="@string/profile_icon" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/scan_button"
            android:contentDescription="@string/scan_icon" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:id="@+id/mail_button"
            android:contentDescription="@string/mail_icon" />

    </LinearLayout>

</RelativeLayout>
