...
    android:layout_height="match_parent"
    android:id="@+id/ProfileView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_save_changes"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:orientation="vertical">

        <LinearLayout
...
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/full_name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_full_name"
            android:text="Full Name"
            android:textColor="@color/material_dynamic_neutral50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

...
